# bison-rates-demo

./: .gitignore  Cargo.toml  Makefile  Pipfile  README.md  app.py  cdk.json  pyproject.toml
bison-rates/: Cargo.toml
crates/bison-rates/: Cargo.toml  build.rs
crates/bison-rates/src/: lib.rs  meta.rs  responses.rs  storage.rs
crates/sdk-server-bison-rates/: Cargo.toml
crates/sdk-server-bison-rates/src/: error.rs  http_serde.rs  input.rs  json_deser.rs  json_ser.rs  lib.rs  model.rs  operation.rs  operation_deser.rs  operation_handler.rs  operation_registry.rs  operation_ser.rs  output.rs  server_operation_handler_trait.rs
presentation/: diagrams.tldr
smithy/: .gitignore  Cargo.toml  build.gradle.kts  gradle.properties  settings.gradle.kts  smithy-build.json  version.properties
smithy/model/: common.smithy  get.smithy  main.smithy  post.smithy
stacks/: __init__.py  __main__.py  bison_rates.py  cargo_cross.py
tests/: test_stack.py
